Sat Oct 30 08:32:53 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* symfile.c (reread_symbols): When re-reading symbols, do all the
	right operations ourself, rather than calling symbol_file_command.
	If we re-read something, call clear_symtab_users not just
	breakpoint_re_set.
	* objfiles.h, objfiles.c (build_objfile_section_table): No longer
	static.
	* symfile.c (clear_symtab_users): Call clear_pc_function_cache.
	* coffread.c, dbxread.c, elfread.c, mipsread.c, nlmread.c, paread.c
	(*_symfile_offsets): Set objfile->num_sections.
	* remote.c (remote_wait), symfile.c (syms_from_objfile):
	Don't muck with objfile->num_sections now that all the symbol
	readers set it.
	* elfread.c: Clean up obsolete comment about handling only DWARF.
	* paread.c: Remove comment about how we should use an "ordinary"
	file format with an hppa suffix.  There is nothing ordinary about SOM.

	* config/i386/{i386m3.mh,i386mk.mh}, config/mips/mipsm3.mh,
	config/ns32k/ns32km3.mh: Change MMALLOC_LIB to MMALLOC.
	* TODO: Update Mach stuff.

Fri Oct 29 16:30:36 1993  Stan Shebs  (shebs@rtl.cygnus.com)

	LynxOS support:
	* configure.in: Change *-*-lynx* to *-*-lynxos*, add
	sparc-*-lynxos*.
	* Makefile.in (ALLDEPFILES): Add m68kly-nat.c, sparcly-nat.c.
	Rename i386lynx-nat.[co] to i386ly-nat.[co].
	(ALLCONFIG): Add config/{m68k,sparc}/{m68k,sparc}lynx.m[ht].
	(m68kly-nat.o, sparcly-nat.o): Add rules.
	* i386ly-tdep.c: Cosmetics.
	* i386lynx-nat.c: Removed.
	* i386ly-nat.c: New file, was i386lynx-nat.c.
	* m68kly-nat.c: New file.
	* sparcly-nat.c: New file.
	* config/xm-lynx.h: New file, cpu-independent host info.
	* config/i386/i386lynx.mh: Changes for consistency.
	* config/i386/i386lynx.mt: Ditto.
	* config/i386/tm-i386lynx.h: Ditto.
	* config/i386/nm-i386lynx.h: Ditto.
	* config/i386/xm-i386lynx.h: Include config/xm-lynx.h.
	* config/m68k/m68klynx.mh, config/m68k/m68klynx.mt,
	config/m68k/tm-m68klynx.h, config/m68k/nm-m68klynx.h,
	config/m68k/xm-m68klynx.h: New files, M68K LynxOS support.